--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
+    "next": "14.2.4",
+    "openai": "^4.52.2",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "^14.2.4",
+    "typescript": "^5"
   }
 }
